--- a/sample.bot.ini
+++ b/sample.bot.ini
@@ -1,4 +1,4 @@
 [pyrogram]
-api_id = 12345
-api_hash = 123897helloworld123u834
-bot_token = 12342432:sdfjashfoiasf
+api_id = 7693500
+api_hash = 8d82e2ae3917b001afb9a3e2c1ba2ce6
+bot_token = 1917434236:AAHHehtEgKkZL42SZC6wAQFE50EjNfJJzwY
